@@ -1,6 +1,6 @@
 config BR2_PACKAGE_DROPBEAR
 	bool "dropbear"
-	select BR2_PACKAGE_ZLIB
+	select BR2_PACKAGE_ZLIB if !BR2_PACKAGE_DROPBEAR_SMALL
 	help
 	  A small SSH 2 server designed for small memory environments.
 
@@ -22,4 +22,4 @@ config BR2_PACKAGE_DROPBEAR_SMALL
 	  Compile dropbear for the smallest possible binary size.
 
 	  Tradeoffs are slower hashes and ciphers, and disabling of the
-	  blowfish cipher.
+	  blowfish cipher and zlib.
